# opendataeditor

./: .eslintrc  .gitattributes  .gitignore  .prettierrc  404.html  :w  <  CNAME  Dockerfile  LICENSE.md  Makefile  README.md  TODO.md  build.py  create-deb.sh  create-dmg.sh  datapackage.json  dev-requirements.txt  electron-builder.yaml  electron.vite.config.ts  hook-llama_cpp.py  index.html  jest.config.js  livemark.yaml  mkdocs.yaml  package.json  pyproject.toml  requirements.txt  sitemap.xml  start.sh  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  wdio-github.conf.ts  wdio.conf.ts  webpack.config.js
.github/workflows/: create-dmg.yaml  docs.yaml  general.yaml  project.yaml  test.yaml
.husky/: pre-push
.server/ik-QT4-FDRlUW2o8wuaifw/: datapackage.json
.storybook/: main.js  main.ts  manager-head.html  manager.js  middleware.js  middleware.ts  preview-head.html  preview.js  preview.ts  theme.js  theme.ts
blog/: index.html
client/: client.ts  global.d.ts  i18n.js  index.html  index.ts  loading.html  locale.ts  main.ts  render.ts  settings.ts  themes.ts
client/helpers/: column.ts  file.ts  general.ts  help.ts  history.ts  index.ts  (+5 more)
data/: chart.json  duplicate-row.csv  missing-cell.csv  report-invalid.json  report-valid.json
demo/: Browser.stories.tsx  Content.stories.tsx  Datagrid.stories.tsx  Dialect.stories.tsx  File.stories.tsx  Package.stories.tsx  Project.stories.tsx  Report.stories.tsx  Resource.stories.tsx  Schema.stories.tsx  Source.stories.tsx  Table.stories.tsx  Table2.stories.tsx  Test.stories.tsx
desktop/: backend.ts  bridge.ts  build.ts  context.ts  i18n.mainconfig.js  index.ts  menu.ts  python.ts  renderer.ts  resources.ts  server.ts  settings.ts  system.ts  venv.ts  window.ts
docs/: CNAME  Checklist.stories.tsx  Detector.stories.tsx  Dialect.stories.tsx  Features.stories.tsx  Inquiry.stories.tsx  Pipeline.stories.tsx  Query.stories.tsx  Report.stories.tsx  Resource.stories.tsx  Schema.stories.tsx  Status.stories.tsx  Strategy.stories.tsx  Table.stories.tsx  development.html  development.md  index.md  installation.md  metadata.html  metadata.md  requirements.txt  usage.md
example/: article.md  build.py  chart.json  datapackage.json  map.geojson  script.py  table.csv  view.json
fixtures/: report-invalid.json  report-valid.json
installation/: index.html
legacy/: Chips.tsx  Code.tsx  Image.tsx
legacyTable/: columns.ts
locale/: data.ts  index.ts  locale.ts
locales/: en.json  es.json  fr.json  index.ts  pt.json
localization/: i18n.config.js
ode/: __init__.py  ai_widget.py  data_widget.py  errors_widget.py  file.py  llama.py  log_setup.py  main.py  metadata_widget.py  paths.py  shared.py  source_widget.py  utils.py
portal/: astro.config.mjs  package.json
public/: index.html
runner/: build.py
scripts/: translate.ts
search/: search_index.json
server/: __main__.py  build.py  client.py  config.py  conftest.py  exception.py  project.py  server.py  settings.py  types.py
src/: ai_widget.py  application.html  application.ts  client.ts  client2.ts  data_widget.py  entry.ts  errors_widget.py  global.d.ts  helpers.ts  index.ts  logic.ts  main.py  main.ts  metadata.html  metadata.ts  metadata_widget.py  paths.py  render.ts  server.ts  settings.ts  store.ts  themes.ts
tests/: conftest.py  test.spec.js
usage/: index.html
(+1980 files in other folders)
