[project]
name = "opendataeditor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frictionless[excel,github]==5.18.0",
    "llama-cpp-python==0.3.16",
    "openai==1.61.1",
    "openpyxl==3.1.5",
    "pyside6==6.9.2",
    "pytest==8.3.5",
    "xlrd==2.0.2",
    "xlutils==2.0.0",
    "xlwt==1.3.0",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
llama-cpp-python = { git = "https://github.com/LongStoryMedia/llama-cpp-python.git", rev = "feature/b6482" }
