[project]
name = "opendataeditor"
version = "1.7.1" # Update this version number also in ode/__init__.py
description = "A no-code application to explore and validate tabular data in a simple way. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frictionless[excel,github]>=5.18.1",
    "llama-cpp-python>=0.3.16",
    "openpyxl>=3.1.5",
    "pyside6>=6.10.0",
    "xlrd>=2.0.2",
    "xlutils>=2.0.0",
    "xlwt>=1.3.0",
]

[tool.ruff]
line-length = 140

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.18.2",
    "myst-parser>=4.0.1",
    "pyinstaller==6.11.1",
    "pytest>=9.0.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.4",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
